@@ -2,6 +2,8 @@
 v2.0-git
 --------
 
+[mjr] Add ability to optionally add client, cost object, or job type to timer
+      on creation.
 [mjr] Add listTimeObjects support.
 [mjr] Redesigned UI.
 [jan] Fix listing per-client cost objects in search form.
